--- a/outputs/paper/ref.bib
+++ b/outputs/paper/ref.bib
@@ -20,7 +20,7 @@
 
 @Book{rGgplot2,
   author = {Hadley Wickham},
-  title = {ggplot2: Elegant Graphics for Data Analysis},
+  title = {{ggplot2: Elegant Graphics for Data Analysis}},
   publisher = {Springer-Verlag New York},
   year = {2016},
   isbn = {978-3-319-24277-4},
@@ -28,7 +28,7 @@
 },
 
 @Manual{rDplyr,
-  title = {dplyr: A Grammar of Data Manipulation},
+  title = {{dplyr: A Grammar of Data Manipulation}},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2022},
   note = {R package version 1.0.10},
@@ -36,7 +36,7 @@
 },
 
 @Manual{rReadr,
-  title = {readr: Read Rectangular Text Data},
+  title = {{readr: Read Rectangular Text Data}},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
   year = {2022},
   note = {R package version 2.1.3},
@@ -44,7 +44,7 @@
 },
 
 @Manual{rTibble,
-  title = {tibble: Simple Data Frames},
+  title = {{tibble: Simple Data Frames}},
   author = {Kirill Müller and Hadley Wickham},
   year = {2022},
   note = {R package version 3.1.8},
@@ -54,7 +54,7 @@
 @InCollection{rKnitr,
   booktitle = {Implementing Reproducible Computational Research},
   editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  title = {{knitr: A Comprehensive Tool for Reproducible Research in {R}}},
   author = {Yihui Xie},
   publisher = {Chapman and Hall/CRC},
   year = {2014},
@@ -63,7 +63,7 @@
 },
 
 @Manual{rKableExtra,
-  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  title = {{kableExtra: Construct Complex Table with `kable' and Pipe Syntax}},
   author = {Hao Zhu},
   year = {2021},
   note = {R package version 1.3.4},
@@ -71,7 +71,7 @@
 },
 
 @Manual{rJanitor,
-  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  title = {{janitor: Simple Tools for Examining and Cleaning Dirty Data}},
   author = {Sam Firke},
   year = {2021},
   note = {R package version 2.1.0},
@@ -79,7 +79,7 @@
 },
 
 @Manual{rHaven,
-  title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
+  title = {{haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files}},
   author = {Hadley Wickham and Evan Miller and Danny Smith},
   year = {2022},
   note = {R package version 2.5.1},
@@ -87,7 +87,7 @@
 },
 
 @Manual{rFormattable,
-  title = {formattable: Create 'Formattable' Data Structures},
+  title = {{formattable: Create 'Formattable' Data Structures}},
   author = {Kun Ren and Kenton Russell},
   year = {2021},
   note = {R package version 0.2.1},
@@ -95,7 +95,7 @@
 },
 
 @Manual{rHere,
-  title = {here: A Simpler Way to Find Your Files},
+  title = {{here: A Simpler Way to Find Your Files}},
   author = {Kirill Müller},
   year = {2020},
   note = {R package version 1.0.1},
